welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: ';' expected but 'if' found.
if (x>0) {return false} else {return true}	if(estSurBiscuit) {x=x+1}
                                                ^